reset some content

--- a/lang/cy.json
+++ b/lang/cy.json
@@ -32,7 +32,7 @@
     "lastName": "Enw olaf",
     "otherNamesYouAreKnownByOptional": "Welsh",
     "otherNamesYouAreKnownBy": "Welsh",
-    "dateOfBirth": "Dyddiad geni",
+    "dateOfBirth": "Welsh",
     "dateOfBirthHint": "Er enghraifft, 31 3 1980.",
     "day": "Dyddiad",
     "month": "Mis"
