--- a/lang/en.json
+++ b/lang/en.json
@@ -1,5 +1,5 @@
 {
-    "cookiesOn": "Cookies on",
+    "cookiesOn": "Cookies on - with an edit to the english",
     "cookiesContent": "<p class=\"govuk-body\">We use some essential cookies to make this service work.</p><p class=\"govuk-body\">We’d also like to use analytics cookies so we can understand how you use the service and make improvements.</p>",
     "acceptCookies": "Accept analytics cookies",
     "rejectCookies": "Reject analytics cookies",
