--- a/lang/en.json
+++ b/lang/en.json
@@ -5,7 +5,7 @@
     "rejectCookies": "Reject analytics cookies",
     "viewCookies": "View cookies",
     "skipToMainContent": "Skip to main content",
-    "urModeContent": "This is a prototype – this is not a real service.",
+    "urModeContent": "This is a prototype",
     "supportLinks": "Support links",
     "help": "Help",
     "cookies": "Cookies",
